change the color

--- a/app/src/main/res/layout/fragment_line_chart.xml
+++ b/app/src/main/res/layout/fragment_line_chart.xml
@@ -12,11 +12,13 @@
         android:layout_height="fill_parent"
         ap:label="A Simple XY Plot"
         ap:rangeLabel="range"
+        ap:rangeLabelTextColor="#111111"
         ap:domainLabel="domain"
-        ap:borderColor="#000000"
-        ap:backgroundColor="#000000"
-        ap:graphBackgroundColor="#000000"
-        ap:gridBackgroundColor="#111111"
+        ap:domainLabelTextColor="#111111"
+        ap:borderColor="#111111"
+        ap:backgroundColor="#FFFFFF"
+        ap:graphBackgroundColor="#FFFFFF"
+        ap:gridBackgroundColor="#FFFFFF"
         ap:gridPaddingLeft="20dp"
         ap:gridPaddingRight="20dp"
         ap:gridPaddingTop="20dp"
@@ -27,18 +29,31 @@
         ap:graphMarginTop="20dp"
         ap:graphMarginBottom="40dp"
         ap:graphMarginLeft="15dp"
+        ap:labelTextColor="#111111"
         ap:graphMarginRight="10dp"
-        ap:graphDomainLineColor="#FFFFFF"
+        ap:graphDomainLineColor="#111111"
         ap:graphDomainLineThickness="1dp"
-        ap:graphRangeLineColor="#FFFFFF"
+        ap:graphRangeLineColor="#111111"
         ap:graphRangeLineThickness="1dp"
         ap:rangeTickLabelTextSize="15sp"
         ap:rangeOriginTickLabelTextSize="15sp"
+        ap:rangeOriginTickLabelTextColor="#111111"
+        ap:rangeTickLabelTextColor="#111111"
         ap:domainTickLabelTextSize="15sp"
+        ap:domainTickLabelTextColor="#111111"
         ap:domainOriginTickLabelTextSize="15sp"
+        ap:domainOriginTickLabelTextColor="#111111"
         ap:legendTextSize="15sp"
         ap:legendIconHeight="15dp"
         ap:legendIconWidth="15dp"
         ap:legendHeight="25dp"
         ap:legendAnchorPosition="right_bottom"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|top">
+
+    </LinearLayout>
 </FrameLayout>
