Change line chart

--- a/app/src/main/res/layout/fragment_line_chart.xml
+++ b/app/src/main/res/layout/fragment_line_chart.xml
@@ -47,6 +47,7 @@
         ap:legendIconHeight="15dp"
         ap:legendIconWidth="15dp"
         ap:legendHeight="25dp"
+        ap:legendTextColor="#111111"
         ap:legendAnchorPosition="right_bottom"/>
 
     <LinearLayout
