alter line graph

--- a/app/src/main/res/layout/fragment_line_chart.xml
+++ b/app/src/main/res/layout/fragment_line_chart.xml
@@ -30,10 +30,10 @@
         ap:graphMarginBottom="40dp"
         ap:graphMarginLeft="15dp"
         ap:labelTextColor="#111111"
-        ap:graphMarginRight="10dp"
-        ap:graphDomainLineColor="#111111"
+        ap:graphMarginRight="20dp"
+        ap:graphDomainLineColor="#FFFFFF"
         ap:graphDomainLineThickness="1dp"
-        ap:graphRangeLineColor="#111111"
+        ap:graphRangeLineColor="#FFFFFF"
         ap:graphRangeLineThickness="1dp"
         ap:rangeTickLabelTextSize="15sp"
         ap:rangeOriginTickLabelTextSize="15sp"
