--- a/app/src/main/res/layout/fragment_line_chart.xml
+++ b/app/src/main/res/layout/fragment_line_chart.xml
@@ -4,51 +4,16 @@
     xmlns:ap="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gadgeon.com.charts.charts.LineChart">
+    tools:context=".charts.LineChartFragment">
 
     <com.androidplot.xy.XYPlot
         android:id="@+id/plot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        ap:label="A Simple XY Plot"
-        ap:rangeLabel="range"
-        ap:rangeLabelTextColor="#111111"
-        ap:domainLabel="domain"
-        ap:domainLabelTextColor="#111111"
-        ap:borderColor="#111111"
-        ap:backgroundColor="#FFFFFF"
-        ap:graphBackgroundColor="#FFFFFF"
-        ap:gridBackgroundColor="#FFFFFF"
-        ap:gridPaddingLeft="20dp"
-        ap:gridPaddingRight="20dp"
-        ap:gridPaddingTop="20dp"
-        ap:gridPaddingBottom="20dp"
-        ap:labelTextSize="20sp"
-        ap:rangeLabelTextSize="13sp"
-        ap:domainLabelTextSize="13sp"
-        ap:graphMarginTop="20dp"
-        ap:graphMarginBottom="40dp"
-        ap:graphMarginLeft="15dp"
-        ap:labelTextColor="#111111"
-        ap:graphMarginRight="20dp"
-        ap:graphDomainLineColor="#FFFFFF"
+        ap:rangeLabel="Range"
+        ap:domainLabel="Domain"
         ap:graphDomainLineThickness="1dp"
-        ap:graphRangeLineColor="#FFFFFF"
-        ap:graphRangeLineThickness="1dp"
-        ap:rangeTickLabelTextSize="15sp"
-        ap:rangeOriginTickLabelTextSize="15sp"
-        ap:rangeOriginTickLabelTextColor="#111111"
-        ap:rangeTickLabelTextColor="#111111"
-        ap:domainTickLabelTextSize="15sp"
-        ap:domainTickLabelTextColor="#111111"
-        ap:domainOriginTickLabelTextSize="15sp"
-        ap:domainOriginTickLabelTextColor="#111111"
-        ap:legendTextSize="15sp"
-        ap:legendIconHeight="15dp"
-        ap:legendIconWidth="15dp"
-        ap:legendHeight="25dp"
-        ap:legendTextColor="#111111"
-        ap:legendAnchorPosition="right_bottom"/>
+        ap:graphRangeLineThickness="1dp" />
 
     <LinearLayout
         android:orientation="vertical"
