--- a/app/src/main/res/layout/fragment_step_chart.xml
+++ b/app/src/main/res/layout/fragment_step_chart.xml
@@ -5,7 +5,7 @@
     xmlns:ap="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gadgeon.com.charts.charts.StepChart">
+    tools:context=".charts.StepChartFragment">
 
     <com.androidplot.xy.XYPlot
         android:id="@+id/plot"
@@ -14,10 +14,6 @@
         android:layout_weight="1"
         ap:label="HTTP Server State (15  Sec)"
         ap:domainLabel="time (secs)"
-        ap:rangeLabel="server state"
-        ap:gridPaddingLeft="20dp"
-        ap:gridPaddingRight="20dp"
-        ap:gridPaddingTop="20dp"
-        ap:gridPaddingBottom="20dp"/>
+        ap:rangeLabel="server state"/>
 
 </FrameLayout>
