--- a/app/src/main/res/layout/fragment_candlestick_chart.xml
+++ b/app/src/main/res/layout/fragment_candlestick_chart.xml
@@ -1,16 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ap="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".charts.LineChartFragment">
+    tools:context=".charts.CandlestickChartFragment">
 
     <com.androidplot.xy.XYPlot
         android:id="@+id/plot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        ap:label="Growth"
-        ap:domainLabel="Month"
-        ap:rangeLabel="Revenue (millions)" />
-    </FrameLayout>
+        ap:rangeLabel="Range"
+        ap:domainLabel="Domain" />
+</FrameLayout>
