--- a/app/src/main/res/layout/fragment_pie_chart.xml
+++ b/app/src/main/res/layout/fragment_pie_chart.xml
@@ -4,17 +4,11 @@
     xmlns:ap="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="gadgeon.com.charts.charts.LineChart">
+    tools:context=".charts.LineChartFragment">
 
     <com.androidplot.pie.PieChart
         android:id="@+id/pieplot"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        androidPlot.title="A Simple Pie Chart"
-     
-        androidPlot.titleWidget.labelPaint.textColor="#111111"
-        androidPlot.titleWidget.labelPaint.textSize="20sp"
-         />
+        android:layout_height="fill_parent" />
 
 </FrameLayout>
