--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -6,24 +6,31 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".LandingPageActivity">
+    tools:context=".LandingPageActivity"
+    android:background="@color/background" >
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
+            android:background="?attr/colorPrimary"
+            android:textAlignment="center" />
 
     </android.support.design.widget.AppBarLayout>
+
+
     <ListView
         android:id="@+id/chart_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/chart_general_margin">
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/chart_general_margin"
+        android:textSize="40sp"       >
     </ListView>
 </LinearLayout>
