--- a/app/src/main/res/layout/list_view_charts.xml
+++ b/app/src/main/res/layout/list_view_charts.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="60dp">
+    style="@style/mystyle">
     <TextView
         android:id="@+id/list_item_text"
         android:layout_width="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="#FFFFFF"
+
+        />
 
 </RelativeLayout>
