--- a/app/src/main/res/layout/list_view_charts.xml
+++ b/app/src/main/res/layout/list_view_charts.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/mystyle">
+    style="@style/mynewstyle">
     <TextView
         android:id="@+id/list_item_text"
         android:layout_width="wrap_content"
@@ -10,7 +10,7 @@
         android:layout_centerVertical="true"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
 
         />
 
