--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,4 +55,12 @@
         <item name="gridPaddingBottom">20dp</item>
     </style>
 
+    <style name="mynewstyle" parent="AppTheme">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">75dp</item>
+        <item name="android:background">@color/background</item>
+
+    </style>
+
 </resources>
