--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,7 +55,7 @@
         <item name="gridPaddingBottom">20dp</item>
     </style>
 
-    <style name="mynewstyle" parent="AppTheme">
+    <style name="mynewstyle">
         <item name="android:gravity">center</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">75dp</item>
